feat: api freeDocument with swagger
